Backport 1.21.1 implementation baseline